// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs"
  >
     
    <span>
      Default
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs iconOnly large"
  >
    <i
      class="material-icons svelte-1f17ahs"
    >
      play_arrow
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs large"
  >
    <i
      class="material-icons svelte-1f17ahs"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs primary"
  >
     
    <span>
      Primary
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs primary iconOnly"
  >
    <i
      class="material-icons svelte-1f17ahs"
    >
      volume_up
    </i>
     
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs primary"
  >
    <i
      class="material-icons svelte-1f17ahs"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-1f17ahs halo"
    >
      5
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs"
  >
    <i
      class="material-icons svelte-1f17ahs"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs"
  >
    <i
      class="material-icons svelte-1f17ahs"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
     
    <div
      class="badge svelte-1f17ahs halo"
    >
      23
    </div>
  </button>
</section>
`;

exports[`Storyshots Components/Button With Badge Limit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-1f17ahs"
  >
    <i
      class="material-icons svelte-1f17ahs"
    >
      warning
    </i>
     
    <span>
      Just too much
    </span>
     
     
    <div
      class="badge svelte-1f17ahs halo"
    >
      999+
    </div>
  </button>
</section>
`;
